SYMPHONY-1696 Added duplicate migration detection. Minor refactoring.

--- a/uMigrate.Tests/uMigrate.Tests.csproj
+++ b/uMigrate.Tests/uMigrate.Tests.csproj
@@ -234,6 +234,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Unit\AppDomainAssemblyMigrationTypeProviderTests.cs" />
+    <Compile Include="Unit\MigrationResolverTests.cs" />
     <Compile Include="Unit\UmbracoMigrationBaseTests.cs" />
     <Compile Include="Unit\UmbracoMigratorTests.cs">
       <SubType>Code</SubType>
