--- a/uMigrate/uMigrate.csproj
+++ b/uMigrate/uMigrate.csproj
@@ -227,6 +227,8 @@
     <Compile Include="Fluent\IContentFilteredSetSyntax.cs" />
     <Compile Include="Fluent\IContentSetSyntax.cs" />
     <Compile Include="Fluent\IDatabaseSyntax.cs" />
+    <Compile Include="Infrastructure\MigrationRunEventArgs.cs" />
+    <Compile Include="Infrastructure\MigrationRunStartingEventArgs.cs" />
     <Compile Include="Internal\IMigrationTypeProvider.cs" />
     <Compile Include="Internal\AppDomainAssemblyMigrationTypeProvider.cs" />
     <Compile Include="Internal\SyntaxImplementations\ContentSetSyntax.cs" />
@@ -256,6 +258,8 @@
     <Compile Include="Internal\MigrationContext.cs" />
     <Compile Include="Internal\MigrationResolver.cs" />
     <Compile Include="Internal\MigrationRecord.cs" />
+    <Compile Include="Infrastructure\MigrationEventArgs.cs" />
+    <Compile Include="Infrastructure\MigrationStartingEventArgs.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UmbracoMigrationBase.cs" />
     <Compile Include="UmbracoMigrationException.cs" />
@@ -264,7 +268,9 @@
   <ItemGroup>
     <None Include="app.config" />
     <None Include="packages.config" />
-    <None Include="uMigrateCore.nuspec" />
+    <None Include="uMigrateCore.nuspec">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
