--- a/uMigrate.Tests.Integration/packages.config
+++ b/uMigrate.Tests.Integration/packages.config
@@ -6,6 +6,7 @@
   <package id="HtmlAgilityPack" version="1.4.6" targetFramework="net45" />
   <package id="ImageProcessor" version="1.9.0.0" targetFramework="net45" />
   <package id="ImageProcessor.Web" version="3.2.3.0" targetFramework="net45" />
+  <package id="JetBrains.Annotations" version="7.0" targetFramework="net45" />
   <package id="Lucene.Net" version="2.9.4.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="4.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc.FixedDisplayModes" version="1.0.0" targetFramework="net45" />
@@ -15,10 +16,10 @@
   <package id="Microsoft.AspNet.WebApi.Core" version="4.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="4.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="2.0.20710.0" targetFramework="net45" />
-  <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net45" />
+  <package id="Microsoft.SqlServer.Compact" version="4.0.8876.1" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="MiniProfiler" version="2.1.0" targetFramework="net45" />
-  <package id="Moq" version="4.2.1312.1622" targetFramework="net45" />
+  <package id="Moq" version="4.2.1507.0118" targetFramework="net45" />
   <package id="MySql.Data" version="6.6.5" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.2" targetFramework="net45" />
   <package id="NUnit" version="2.6.3" targetFramework="net45" />
