--- a/uMigrate.Tests.Unit/uMigrate.Tests.Unit.csproj
+++ b/uMigrate.Tests.Unit/uMigrate.Tests.Unit.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{0D3D3FCB-DB2B-4341-AD47-69622208938B}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>uMigrate.Tests</RootNamespace>
-    <AssemblyName>uMigrate.Tests</AssemblyName>
+    <RootNamespace>uMigrate.Tests.Unit</RootNamespace>
+    <AssemblyName>uMigrate.Tests.Unit</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
@@ -117,9 +117,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\MiniProfiler.2.1.0\lib\net40\MiniProfiler.dll</HintPath>
     </Reference>
-    <Reference Include="Moq, Version=4.2.1312.1622, Culture=neutral, PublicKeyToken=69f491c39445e920, processorArchitecture=MSIL">
+    <Reference Include="Moq, Version=4.2.1507.118, Culture=neutral, PublicKeyToken=69f491c39445e920, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Moq.4.2.1312.1622\lib\net40\Moq.dll</HintPath>
+      <HintPath>..\packages\Moq.4.2.1507.0118\lib\net40\Moq.dll</HintPath>
     </Reference>
     <Reference Include="MySql.Data, Version=6.6.5.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -234,10 +234,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Unit\AppDomainAssemblyMigrationTypeProviderTests.cs" />
-    <Compile Include="Unit\MigrationResolverTests.cs" />
-    <Compile Include="Unit\UmbracoMigrationBaseTests.cs" />
-    <Compile Include="Unit\UmbracoMigratorTests.cs">
+    <Compile Include="AppDomainAssemblyMigrationTypeProviderTests.cs" />
+    <Compile Include="MigrationResolverTests.cs" />
+    <Compile Include="UmbracoMigrationBaseTests.cs" />
+    <Compile Include="UmbracoMigratorTests.cs">
       <SubType>Code</SubType>
     </Compile>
   </ItemGroup>
@@ -248,7 +248,7 @@
   <ItemGroup>
     <ProjectReference Include="..\uMigrate\uMigrate.csproj">
       <Project>{0c0338a2-fe24-440e-86ed-79a17a041738}</Project>
-      <Name>MigrationFramework</Name>
+      <Name>uMigrate</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup />
