--- a/uMigrate/uMigrateCore.nuspec
+++ b/uMigrate/uMigrateCore.nuspec
@@ -9,7 +9,8 @@
     <description>$description$</description>
     <projectUrl>https://github.com/AffinityID/uMigrate</projectUrl>
     <releaseNotes>
-      0.9.4 Fixed issue where children added by AddChild didn't have inherited properties (thanks @Myster).
+      0.10.0 Support for other database engines (where supported by Umbraco), e.g. SQL CE.
+      0.9.4  Fixed issue where children added by AddChild didn't have inherited properties (thanks @Myster).
     </releaseNotes>
     <tags>Umbraco migrations</tags>
   </metadata>
