[gh-7] Added DataType.SetEditorAlias (closes gh-7).

--- a/uMigrate.Tests.Integration/uMigrate.Tests.Integration.csproj
+++ b/uMigrate.Tests.Integration/uMigrate.Tests.Integration.csproj
@@ -201,6 +201,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataTypeTests.cs" />
     <Compile Include="ContentTypeTests.cs" />
     <Compile Include="IntegrationTestsBase.cs" />
     <Compile Include="Internal\StubCacheRefresher.cs" />
