[gh-18] Added SortProperties(params string[]) overload.

--- a/uMigrate.UI/uMigrate.nuspec
+++ b/uMigrate.UI/uMigrate.nuspec
@@ -9,7 +9,7 @@
     <description>Migration framework for Umbraco (Core+UI).</description>
     <projectUrl>https://github.com/AffinityID/uMigrate</projectUrl>
     <releaseNotes>
-      0.11.0 Added ContentType.Delete and DataType.SetPropertyAlias to fluent API.
+      0.11.0 Added ContentType.Delete, DataType.SetPropertyAlias and ContentType.SortProperties(list) to fluent API.
       0.10.0 Support for other database engines (where supported by Umbraco), e.g. SQL CE.
       0.9.4  Fixed issue where children added by AddChild didn't have inherited properties (thanks @Myster).
     </releaseNotes>
