--- a/uMigrate.Tests.Integration/uMigrate.Tests.Integration.csproj
+++ b/uMigrate.Tests.Integration/uMigrate.Tests.Integration.csproj
@@ -203,6 +203,7 @@
   <ItemGroup>
     <Compile Include="DataTypeTests.cs" />
     <Compile Include="ContentTypeTests.cs" />
+    <Compile Include="MigrationRecordTests.cs" />
     <Compile Include="IntegrationTestsBase.cs" />
     <Compile Include="Internal\StubCacheRefresher.cs" />
     <Compile Include="Internal\TestDatabaseHelper.cs" />
