SYMPHONY-2609 Added Packages.Install that should install a given Umbraco package (subject to some limitations).

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ packages/
 _ReSharper.*
 /*.nupkg
 uMigrate.Tests.Integration/App_Data/
+uMigrate.Tests.Integration/App_Plugins/
+uMigrate.Tests.Integration/Views/
