--- a/uMigrate.Tests.Integration/uMigrate.Tests.Integration.csproj
+++ b/uMigrate.Tests.Integration/uMigrate.Tests.Integration.csproj
@@ -232,6 +232,7 @@
     <Compile Include="PackageTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Internal\TestUmbracoApplication.cs" />
+    <Compile Include="TemplateTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\uMigrate\uMigrate.csproj">
