--- a/uMigrate/uMigrateCore.nuspec
+++ b/uMigrate/uMigrateCore.nuspec
@@ -11,7 +11,7 @@
     <releaseNotes>
       0.13.0
         * Added uMigrate:Enabled app setting to disable uMigrate if needed.
-        * Added ContentType.Parent and ContentType.SetParent.
+        * Added ContentType.Parent, ContentType.SetParent, Template(alias).
       0.12.2 Updated JetBrains.Annotations dependency (note that its public key changed).
       0.12.1 Fixed edge case bug where it was not possible to manually resave migration records.
       0.12.0 Added Packages.Install to install Umbraco packages during a migration (experimental). No Unistall yet.
