--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 
+.vs/
 bin/
 obj/
 packages/
@@ -6,6 +7,6 @@ packages/
 *.user
 _ReSharper.*
 /*.nupkg
-uMigrate.Tests.Integration/App_Data/
-uMigrate.Tests.Integration/App_Plugins/
-uMigrate.Tests.Integration/Views/
+uMigrate.Tests.Integration*/App_Data/
+uMigrate.Tests.Integration*/App_Plugins/
+uMigrate.Tests.Integration*/Views/
