SYMPHONY-2171 Fixed remaining tests.

--- a/uMigrate.Tests.Integration-7.1.4/uMigrate.Tests.Integration-7.1.4.csproj
+++ b/uMigrate.Tests.Integration-7.1.4/uMigrate.Tests.Integration-7.1.4.csproj
@@ -267,7 +267,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
-    <None Include="packages.config" />
+    <None Include="packages.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="TestPackages\Chosen_Multi-Select_Menu_0.1.zip" />
   </ItemGroup>
   <ItemGroup>
