--- a/uMigrate.Tests.Integration-7.3.5/app.config
+++ b/uMigrate.Tests.Integration-7.3.5/app.config
@@ -2,6 +2,8 @@
 <configuration>
   <configSections>
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
+    <section name="Examine" type="Examine.Config.ExamineSettings, Examine" requirePermission="false" />
+    <section name="ExamineLuceneIndexSets" type="Examine.LuceneEngine.Config.IndexSets, Examine" requirePermission="false" />
   </configSections>
   <appSettings>
     <add key="umbracoConfigurationStatus" value="7.3.5" />
@@ -20,6 +22,19 @@
       <appender-ref ref="ConsoleAppender" />
     </root>
   </log4net>
+  <Examine RebuildOnAppStart="false">
+    <ExamineIndexProviders>
+      <providers />
+    </ExamineIndexProviders>
+    <ExamineSearchProviders defaultProvider="ExternalSearcher">
+      <providers>
+        <add name="ExternalSearcher" type="UmbracoExamine.UmbracoExamineSearcher, UmbracoExamine" enableDefaultEventHandler="false"/>
+      </providers>
+    </ExamineSearchProviders>
+  </Examine>
+  <ExamineLuceneIndexSets>
+    <IndexSet SetName="ExternalIndexSet" IndexPath="~/App_Data/TEMP/ExamineIndexes/External/"/>
+  </ExamineLuceneIndexSets>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
