--- a/uMigrate/uMigrateCore.nuspec
+++ b/uMigrate/uMigrateCore.nuspec
@@ -9,7 +9,8 @@
     <description>$description$</description>
     <projectUrl>https://github.com/AffinityID/uMigrate</projectUrl>
     <releaseNotes>
-      0.14.1 (preliminary) Added template name update support to Template.Add.
+      0.14.2 Improved handling of ReflectionTypeLoadException during migration discovery.
+      0.14.1 Added template name update support to Template.Add.
       0.14.0 Added Macros fluent interface: Add, Change and Delete.
       0.13.0
         * Added uMigrate:Enabled app setting to disable uMigrate if needed.
