[gh-41] Added ability to replace Content Save&Publish strategy.

--- a/uMigrate.UI/uMigrate.nuspec
+++ b/uMigrate.UI/uMigrate.nuspec
@@ -9,7 +9,10 @@
     <description>Migration framework for Umbraco (Core+UI).</description>
     <projectUrl>https://github.com/AffinityID/uMigrate</projectUrl>
     <releaseNotes>
-      0.15.0 (pre) Corrected SetParent not adding parent to compositions.
+      0.15.0 (pre)
+        * Added a way to customize Save and Publish for content changes.
+        * Changed most Add* methods to take name as the second argument.
+        * Corrected SetParent not adding parent to compositions.
       0.14.2 Improved handling of ReflectionTypeLoadException during migration discovery.
       0.14.1 Added template name update support to Template.Add.
       0.14.0 Added Macros fluent interface: Add, Change and Delete.
