--- a/uMigrate/uMigrateCore.nuspec
+++ b/uMigrate/uMigrateCore.nuspec
@@ -10,6 +10,7 @@
     <projectUrl>https://github.com/AffinityID/uMigrate</projectUrl>
     <releaseNotes>
       0.15.0 (pre)
+        * Added a way to customize Save and Publish for content changes.
         * Changed most Add* methods to take name as the second argument.
         * Corrected SetParent not adding parent to compositions.
       0.14.2 Improved handling of ReflectionTypeLoadException during migration discovery.
