--- a/uMigrate/uMigrateCore.nuspec
+++ b/uMigrate/uMigrateCore.nuspec
@@ -12,6 +12,7 @@
       0.15.0 (pre)
         * Added a way to customize Save and Publish for content changes.
         * Changed most Add* methods to take name as the second argument.
+        * Added fluent setup method to ContentType.AddChild.
         * Corrected SetParent not adding parent to compositions.
       0.14.2 Improved handling of ReflectionTypeLoadException during migration discovery.
       0.14.1 Added template name update support to Template.Add.
