[gh-15] Moved new AddProperty methods to (Add)PropertyGroup (closes gh-15).

--- a/uMigrate/uMigrate.csproj
+++ b/uMigrate/uMigrate.csproj
@@ -227,6 +227,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Fluent\IContentTypeFilteredSetSyntax.cs" />
+    <Compile Include="Fluent\IContentTypePropertyGroupSetSyntax.cs" />
     <Compile Include="Fluent\IContentTypeSetSyntax.cs" />
     <Compile Include="Fluent\IContentFilteredSetSyntax.cs" />
     <Compile Include="Fluent\IContentSetSyntax.cs" />
