--- a/uMigrate/uMigrateCore.nuspec
+++ b/uMigrate/uMigrateCore.nuspec
@@ -3,13 +3,13 @@
   <metadata>
     <id>uMigrate.Core</id>
     <version>$version$</version>
-    <title>uMigrate Core for Umbraco</title>    
+    <title>uMigrate Core for Umbraco</title>
     <authors>$author$</authors>
     <owners>$author$</owners>
     <description>$description$</description>
     <projectUrl>https://github.com/AffinityID/uMigrate</projectUrl>
     <releaseNotes>
-      0.15.1 (pre) Fixed bug with RemovePropertyGroup failing if PropertyGroup does not exist.
+      0.15.1 Fixed bug with RemovePropertyGroup failing if PropertyGroup does not exist.
       0.15.0
         * Added a way to customize Save and Publish for content changes.
         * Changed most Add* methods to take name as the second argument.
