--- a/uMigrate/uMigrateCore.nuspec
+++ b/uMigrate/uMigrateCore.nuspec
@@ -9,6 +9,7 @@
     <description>$description$</description>
     <projectUrl>https://github.com/AffinityID/uMigrate</projectUrl>
     <releaseNotes>
+      0.15.3 Fixed bug with ChangeAllPropertyValues not changing values of composed properties.
       0.15.2 Fixed bug with AddProperty not calling setup if the property didn't exist.
       0.15.1 Fixed bug with RemovePropertyGroup failing if PropertyGroup does not exist.
       0.15.0
